src/objects/Qualityze_Hierarchy_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Qualityze Settings</description>
    <fields>
        <fullName>API_Version__c</fullName>
        <defaultValue>&quot;33.0&quot;</defaultValue>
        <description>Current API Version</description>
        <inlineHelpText>Set to current API Version</inlineHelpText>
        <label>API_Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <description>Consumer Key</description>
        <inlineHelpText>Enter OAuth Consumer Key for Connected App.</inlineHelpText>
        <label>Client_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <description>Consumer Secret</description>
        <inlineHelpText>Enter OAuth Consumer Secret for Connected App.</inlineHelpText>
        <label>Client_Secret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Approvers__c</fullName>
        <label>Max Approvers</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server__c</fullName>
        <description>Server Instance Location Mnemonic and ID</description>
        <inlineHelpText>Server Instance (e.g. NA17, AP1, or EU4)</inlineHelpText>
        <label>Server</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>namespace_setting__c</fullName>
        <defaultValue>&quot;QPMS&quot;</defaultValue>
        <description>Namespace</description>
        <inlineHelpText>Do not modify on managed package.</inlineHelpText>
        <label>namespace_setting</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Qualityze_Hierarchy_Settings</label>
</CustomObject>